--- a/static/css/jb_style.css
+++ b/static/css/jb_style.css
@@ -399,6 +399,10 @@
     font-size: 14px;
   }
 
+  .jb-notifications-table {
+    font-size: 13px;
+  }
+
   .jb-left-details {
     display: table-cell;
     vertical-align: middle;
