--- a/sled_users/templates/sled_users/user_index.html
+++ b/sled_users/templates/sled_users/user_index.html
@@ -18,10 +18,6 @@
     <div>
       <h1 class="jb-heading-2">
         My Details
-        <button type="button" class="sled-modal btn btn-sm btn-primary" data-form-url="{% url 'sled_users:user-update' user.pk %}">
-          <img src="{% static 'icons/pencil.svg' %}" alt="pencil">
-          Update
-        </button>
       </h1>
       <div>
         <table>
@@ -50,34 +46,15 @@
     </div>
   </div>
 
+  <button type="button" class="sled-modal btn btn-sm btn-primary jb-submit-button-1" data-form-url="{% url 'sled_users:user-update' user.pk %}">
+    <img src="{% static 'icons/pencil.svg' %}" alt="pencil">
+    Update
+  </button>
 
-  <div class="jb-activity">
+  <div>
     <h1 class="jb-heading-2">New Notifications ({{ N_note_unread }})</h1>
     <div>
-      {% if unread_notifications %}
-      <table>
-        <thead>
-          <tr>
-            <th>Sender</th>
-            <th>Sent at</th>
-            <th>Level</th>
-            <th>Verb</th>
-          </tr>
-        </thead>
-        <tbody>
-          {% for note in unread_notifications %}
-          <tr>
-            <td>{{ note.actor }}</td>
-            <td>{{ note.timestamp }}</td>
-            <td>{{ note.level }}</td>
-            <td>{{ note.verb }}</td>
-          </tr>
-          {% endfor %}
-        </tbody>
-      </table>
-      {% else %}
-      <p class="jb-paragraph-2">No new notifications</p>
-      {% endif %}
+      {% include "notifications_container.html" with notifications=unread_notifications %}
       <a href="{% url 'sled_notifications:notifications-list' %}">See all notifications</a>
     </div>
   </div>
@@ -202,15 +179,6 @@
       <p class="jb-paragraph-2">No pending confirmation tasks</p>
       {% endif %}
       <a href="{% url 'sled_tasks:tasks-list' %}">See all tasks</a>
-    </div>
-  </div>
-
-
-  <div>
-    <h1 class="jb-heading-2">New Notifications ({{ N_note_unread }})</h1>
-    <div>
-      {% include "notifications_container.html" with notifications=unread_notifications %}
-      <a href="{% url 'sled_notifications:notifications-list' %}">See all notifications</a>
     </div>
   </div>
 
