Style user visit card page

--- a/sled_users/templates/sled_users/user_visit_card.html
+++ b/sled_users/templates/sled_users/user_visit_card.html
@@ -2,7 +2,9 @@
 {% load static %}
 
 {% block content %}
-SKATA
-{{ sled_user.first_name }}
-{{ sled_user.last_name }}
+<div class="jb-container">
+  SKATA
+  {{ sled_user.first_name }}
+  {{ sled_user.last_name }}
+</div>
 {% endblock content %}
