--- a/sled_notifications/templates/sled_notifications/notifications_list.html
+++ b/sled_notifications/templates/sled_notifications/notifications_list.html
@@ -2,85 +2,46 @@
 {% load static %}
 
 {% block content %}
-{% include "modal_container.html" %}
-
-
 <div class="jb-container">
-  <h1 class="jb-heading-1">Notifications</h1>
-  <table class=jb-notifications-table>
-    <thead>
-      <th></th>
-      <th>Sender</th>
-      <th>Recipient</th>
-      <th>Type</th>
-      <th>Description</th>
-      <th>Objects</th>
-      <th>Level</th>
-      <th>Read</th>
-      <th></th>
-    </thead>
-    <tbody>
-      {% for note in notes %}
-      <tr>
-        <td>{{ note.timestamp }}</td>
-        <td>{{ note.actor }}</td>
-        <td>{{ note.recipient }}</td>
-        <td>{{ note.data.note_type }}</td>
-        <td>{{ note.verb }}</td>
-        <td>{{ note.data.object_ids }}</td>
-        <td>{{ note.level }}</td>
-        {% if note.unread %}
-        <td class="unread">Unread</td>
-        {% else %}
-        <td class="read">Read</td>
-        {% endif %}
-        <td>
-          <button type="button" class="jb-notifications-button" data-form-url="{% url 'sled_notifications:notifications-detail' note.pk %}">
-            <img src="{% static 'icons/eye-fill.svg' %}" alt="eye">
-            Read
-          </button>
-        </td>
-      </tr>
-      {% empty %}
-      <tr>
-        <td colspan="7">No notifications</td>
-      </tr>
-      {% endfor %}
-    </tbody>
-  </table>
+  {% if unread|length > 0 %}
+  <h1 class="jb-heading-1">New notifications</h1>
+  {% include "notifications_container.html" with notifications=unread %}
+  <h1 class="jb-heading-1">Past notifications</h1>
+  {% include "notifications_container.html" with notifications=read %}
+  {% else %}
+  <h1 class="jb-heading-1">All notifications</h1>
+  {% include "notifications_container.html" with notifications=read %}  
+  {% endif %}
 </div>
 {% endblock content %}
 
 
+
+{% block extrastyles %}
+<link rel="stylesheet" type="text/css" href="{% static 'css/vendors/tooltipster.bundle.min.css' %}" />
+<link rel="stylesheet" type="text/css" href="{% static 'css/vendors/tooltipster-sideTip-shadow.min.css' %}" />
+{% endblock extrastyles %}
+
+
 {% block extrascripts %}
-<script src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
-<script src="{% static 'js/bootstrap.min.js' %}"></script>
-<script src="{% static 'js/jquery.bootstrap.modal.forms.js' %}"></script>
-<style>
-  .read {
-    color: green;
-  }
-
-  .unread {
-    color: red;
-  }
-</style>
+<script type="text/javascript" src="{% static 'js/tooltipster.bundle.min.js' %}"></script>
 <script type="text/javascript">
-  $(document).ready(function() {
-
-    function viewNotificationModalForm() {
-      $(".view-note").each(function() {
-        $(this).on("click", function() {
-          $(this).closest('td').prev().text('Read').removeClass('unread').addClass('read');
-        });
-        $(this).modalForm({
-          formURL: $(this).data("form-url"),
-          modalID: "#id-modal"
-        });
+  $(document).ready(function(){      
+      $('.sled-open-tooltip').on("click",function(e){
+	  e.preventDefault();
       });
-    }
-    viewNotificationModalForm();
-
+      
+      $('.sled-open-tooltip').each(function(){
+          var mycontent = $(this).parent().children('.sled-notification-tooltip').html().trim();
+	  $(this).tooltipster({
+      	      position: 'right',
+      	      theme: 'tooltipster-shadow',
+      	      interactive: true,
+      	      contentAsHTML: true,
+      	      content: mycontent,
+	      trigger: 'click'
+          });
+      });
   });
 </script>
 {% endblock extrascripts %}
