--- a/sled_users/templates/sled_users/user_index.html
+++ b/sled_users/templates/sled_users/user_index.html
@@ -48,6 +48,14 @@
 	</table>
       </div>
     </div>
+
+    <div>
+      {% if N_note_unread > 0 %}
+      You have <b>{{ N_note_unread }}</b> new notifications
+      {% endif %}
+      <a href="{% url 'sled_notifications:notifications-list' %}">See all notifications</a>
+    </div>
+    
   </div>
 
 
@@ -169,15 +177,6 @@
       <p class="jb-paragraph-2">No pending confirmation tasks</p>
       {% endif %}
       <a href="{% url 'sled_tasks:tasks-list' %}">See all tasks</a>
-    </div>
-  </div>
-
-
-  <div>
-    <h1 class="jb-heading-2">New Notifications ({{ N_note_unread }})</h1>
-    <div>
-      {% include "notifications_container.html" with notifications=unread_notifications %}
-      <a href="{% url 'sled_notifications:notifications-list' %}">See all notifications</a>
     </div>
   </div>
 
